Blocky fix spacing

--- a/Clock/Blocky/hours.css
+++ b/Clock/Blocky/hours.css
@@ -3,7 +3,7 @@
     background-position-y: 50%;
     background-size: 20% 65%; */
 
-    background-position-x: 18%, 1%;
+    background-position-x: 17%, 1%;
     background-position-y: 50%;
     background-size: 24% 90%, 9% 90%;
 }
