--- a/Clock/Blocky/minutes.css
+++ b/Clock/Blocky/minutes.css
@@ -1,5 +1,5 @@
 .clock :nth-child(5){
-    background-position-x: 99%, 65%;
+    background-position-x: 99%, 63%;
     background-position-y: 50%;
     background-size: 24% 90%;
 }
