--- a/Clock/Blocky/seconds.css
+++ b/Clock/Blocky/seconds.css
@@ -1,5 +1,5 @@
 .clock :nth-child(4){
-    background-position-x: 43%, 43%;
+    background-position-x: 42%, 42%;
     background-position-y: 94%, 69.2%;
     background-size: 4.5% 10%;
 }
